Small CSS adjustments.

--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,8 @@ h5 {
     margin: 25px 0 50px 0;
   }
 
-  @media (max-width: 576px) { /* Adjust breakpoint as needed */
+  @media (max-width: 576px) {
     .h6-sm {
-      font-size: smaller; /* Or you can specify a specific font size */
+      font-size: smaller;
     }
   }
